Changed background color

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-		<a class="navbar-brand" style="background-color: #e3f2fd;" href="{{ url_for('login') }}">ObjectStore</a>
+		<a class="navbar-brand" style="background-color: #fde2f6;" href="{{ url_for('login') }}">ObjectStore</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
